@@ -1,7 +1,68 @@
-import '@images/slider/themeGovernment-News_Slider_02.jpg'
-import '@images/slider/themeGovernment-News_Slider_03.jpg'
-import '@images/slider/themeGovernment-News_Slider_04.jpg'
+import '@images/logo.png'
 
 import '@images/about/we-are.jpg'
 import '@images/about/wins.jpg'
-// import '@images/news/themeGovernment-News_02.jpg'
+
+import '@images/contacts/map.jpg'
+
+import '@images/event-view/Article/logo-ar.jpg'
+import '@images/event-view/Article/logo-ar.png'
+import '@images/event-view/Article/logo-mk.png'
+
+import '@images/events/kabatas_uskudar_ferry_station.jpg'
+import '@images/events/themeGovernment-Events_01.jpg'
+import '@images/events/themeGovernment-Events_02.jpg'
+import '@images/events/themeGovernment-Events_03.jpg'
+import '@images/events/themeGovernment-Events_04.jpg'
+
+import '@images/events-partners/partner1.jpg'
+import '@images/events-partners/partner2.jpg'
+import '@images/events-partners/partner3.jpg'
+import '@images/events-partners/partner4.jpg'
+import '@images/events-partners/partner5.jpg'
+import '@images/events-partners/partner6.jpg'
+import '@images/events-partners/partner7.jpg'
+import '@images/events-partners/partner8.jpg'
+
+import '@images/news/medcine.jpg'
+import '@images/news/themeGovernment-News_01.jpg'
+import '@images/news/themeGovernment-News_02.jpg'
+import '@images/news/themeGovernment-News_03.jpg'
+import '@images/news/themeGovernment-News_04.jpg'
+import '@images/news/themeGovernment-News_05.jpg'
+import '@images/news/themeGovernment-News_06.jpg'
+import '@images/news/themeGovernment-News_07.jpg'
+
+import '@images/news-view/Enseada.jpg'
+import '@images/news-view/Palacio_Pedro_Ernesto.jpg'
+
+import '@images/projects/project-1.jpg'
+import '@images/projects/project-2.jpg'
+
+import '@images/slider/themeGovernment-News_Slider_01.jpg'
+import '@images/slider/themeGovernment-News_Slider_02.jpg'
+import '@images/slider/themeGovernment-News_Slider_03.jpg'
+import '@images/slider/themeGovernment-News_Slider_04.jpg'
+import '@images/slider/themeGovernment-News_Slider_05.jpg'
+
+import '@images/stuff/account-manager.jpg'
+import '@images/stuff/manager.jpg'
+import '@images/stuff/manager2.jpg'
+import '@images/stuff/manager3.jpg'
+import '@images/stuff/manager4.jpg'
+
+import '@images/tabs/bay.jpg'
+import '@images/tabs/fee.jpg'
+import '@images/tabs/italy.jpg'
+
+import '@images/twitter/themeGovernment-Avatars_01.jpg'
+import '@images/twitter/themeGovernment-Avatars_02.jpg'
+import '@images/twitter/themeGovernment-Avatars_03.jpg'
+
+import '@images/workshots/themeGovernment-WorkShots_01.jpg'
+import '@images/workshots/themeGovernment-WorkShots_02.jpg'
+import '@images/workshots/themeGovernment-WorkShots_05.jpg'
+import '@images/workshots/themeGovernment-WorkShots_06.jpg'
+import '@images/workshots/themeGovernment-WorkShots_07.jpg'
+import '@images/workshots/themeGovernment-WorkShots_Big_03.jpg'
+import '@images/workshots/themeGovernment-WorkShots_Big_04.jpg'
